# RobotDH

./: CMakeLists.txt  README.md  app.cpp  app.h  core.cpp  core.h  doublespindelegate.h  initaldate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  presets.cpp  presets.h  render3d.cpp  render3d.h  visual.cpp  visual.h
